--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Project exclude paths
 
 /demo/node_modules/
-/dev/node_modules/
+/demo/node_modules/
 /node_modules/
 
 ### Node ###
@@ -174,4 +174,4 @@ dist
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode
-/dev/node_modules/
+/demo/node_modules/
