--- a/demo/package.json
+++ b/demo/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "payload": "^1.6.6"
+    "payload": "alessiogr/payload#production-with-custom"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
