--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "payload-plugin",
     "embeddings"
   ],
-  "version": "1.0.2",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -32,9 +32,7 @@
     "clean": "rimraf dist && rimraf demo/yarn.lock",
     "prepublishOnly": "yarn clean && yarn build"
   },
-  "peerDependencies": {
-    "payload": "^1.0.27"
-  },
+  "peerDependencies": {},
   "files": [
     "dist",
     "*.js",
@@ -47,18 +45,18 @@
     "@typescript-eslint/parser": "5.57.1",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
-    "eslint": "^8.19.0",
+    "eslint": "^8.38.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.6",
-    "payload": "^1.6.6",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "payload": "alessiogr/payload#production-with-custom"
   }
 }
