--- a/demo/package.json
+++ b/demo/package.json
@@ -19,9 +19,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/react": "^18.0.35",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.6",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
