--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
   ],
   "devDependencies": {
     "@types/express": "^4.17.9",
-    "@typescript-eslint/eslint-plugin": "5.57.1",
-    "@typescript-eslint/parser": "5.57.1",
+    "@types/react": "^18.0.35",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "eslint": "^8.38.0",
