--- a/demo/.env.example
+++ b/demo/.env.example
@@ -4,3 +4,4 @@ PORT=3000
 SERVER_URL=http://localhost:3000
 PAYLOAD_PUBLIC_BASE_DNS='http://localhost:3000'
 OPENAI_SECRET=sk-XXXXX....
+NLP_CLOUD_API_KEY=...
